--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Thinkful Tube</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet"> 
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header role='banner'>
